--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@mui/material": "5.14.11",
     "@mui/lab": "5.0.0-alpha.146",
     "@mui/styles": "5.14.11",
+    "@mui/x-date-pickers": "6.19.6",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.3.0",
     "babel-polyfill": "6.26.0",
@@ -77,10 +78,10 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
-    "@date-io/date-fns": "2.17.0",
+    "@date-io/date-fns": "3.0.0",
     "@emotion/styled": "11.11.0",
     "classnames": "2.3.2",
-    "date-fns": "2.30.0",
+    "date-fns": "^3.2.0",
     "debounce": "1.2.1",
     "fast-deep-equal": "3.1.3",
     "filefy": "0.1.11",
@@ -91,7 +92,7 @@
     "react-double-scrollbar": "0.0.15"
   },
   "peerDependencies": {
-    "@date-io/core": "2.17.0",
+    "@date-io/core": "3.0.0",
     "@mui/material": "5.14.11",
     "@mui/lab": "5.0.0-alpha.146",
     "@mui/styles": "5.14.11",
