--- a/package.json
+++ b/package.json
@@ -94,9 +94,9 @@
   },
   "peerDependencies": {
     "@date-io/core": "3.0.0",
-    "@mui/material": "5.14.11",
-    "@mui/lab": "5.0.0",
-    "@mui/styles": "5.14.11",
+    "@mui/material": "~5.14.11",
+    "@mui/lab": "~5.0.0",
+    "@mui/styles": "~5.14.11",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
